--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=
 index.file=index.php
-url=http://localhost/ppi-modules/
+run.as=LOCAL
+url=http://localhost/ppi15/
